openmediavault (5.5.24-1) stable; urgency=low

  * Improve UI to import a users public SSH key. Now SSH public keys
    in RFC 4716 and OpenSSH format can be imported.
  * Fix a SMB recycle bin cleanup script issue. Execute run-args with
    the '--new-session' option to ensure the scripts will run until
    completion. This should prevent subsequent locks.
  * Enable NTP by default on new installations.
  * Issue #944: Hardening storage backend to prevent errors in LXC.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 19 Jan 2021 21:00:39 +0100

openmediavault (5.5.23-1) stable; urgency=low

  * Update locales.
  * Issue #505: Prepend explanation to cron-apt notifications.
  * Issue #926: Refactor code that is responsible for sending the
    notification email on first UI log in.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 12 Jan 2021 13:11:06 +0100

openmediavault (5.5.22-1) stable; urgency=low

  * Fixing package management issue with new UDEV rules. The old
    file was not removed automatically. Because of that please notice
    the information about the new UDEV rules in 5.5.21.
  * Fix monit/proftpd issue when implicit TLS is enabled.
  * Issue #921: Prevent using WLAN NICs for bond and bridge interfaces.
  * Issue #929: Set 'big_writes' as default mount option for NTFS
    filesystems.
  * Issue #930: Add UDEV rule for OWC Mercury Elite Pro Dual mini
    enclosure to fix the random serial ID issue.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 08 Jan 2021 16:10:43 +0100

openmediavault (5.5.21-1) stable; urgency=low

  * Fixing a bug related to BTRFS which crashed the filesystem UI page.
  * Improve UDEV rules to workaround a JMicron bug. Debugging should be
    easier now because the serial_id helper tool behaves like scsi_id and
    prints out the environment variable ID_SERIAL_SHORT.
    If your USB enclosure reports the vendor 'JMICRON' for the attached