@@ -25,10 +25,6 @@
 			}],
 			"default": ""
 		},
-		"nocertrequest": {
-			"type": "boolean",
-			"default": false
-		},
 		"nosessionreuserequired": {
 			"type": "boolean",
 			"default": false
